--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="black">#000000</color>
     <color name="black_alpha">#58000000</color>
     <color name="white">#ffffff</color>
+    <color name="white_alpha">#d2ffffff</color>
     <color name="transparent">#00000000</color>
     <color name="yellow">#FAC81E</color>
     <color name="grey">#adadad</color>
@@ -15,4 +16,5 @@
     <color name="orange">#F9AB30</color>
     <color name="green">#1acb74</color>
     <color name="red">#ff0000</color>
+    <color name="blue">#0000ff</color>
 </resources>
