--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,9 +7,14 @@
     <dimen name="margin_s4">16dp</dimen>
     <dimen name="margin_s6">24dp</dimen>
     <dimen name="margin_s8">32dp</dimen>
+    <dimen name="margin_s32">128dp</dimen>
+    <dimen name="margin_s47">188dp</dimen>
+    <dimen name="margin_s50">200dp</dimen>
 
+    <dimen name="padding_2">2dp</dimen>
     <dimen name="padding_s1">4dp</dimen>
     <dimen name="padding_s2">8dp</dimen>
+    <dimen name="padding_s4">16dp</dimen>
 
     <dimen name="width_1">1dp</dimen>
     <dimen name="width_s3">12dp</dimen>
@@ -18,28 +23,39 @@
     <dimen name="width_s6">24dp</dimen>
     <dimen name="width_s7">28dp</dimen>
     <dimen name="width_s8">32dp</dimen>
+    <dimen name="width_s9">36dp</dimen>
+    <dimen name="width_s15">60dp</dimen>
+    <dimen name="width_s18">72dp</dimen>
+    <dimen name="width_s20">80dp</dimen>
     <dimen name="width_s30">120dp</dimen>
     <dimen name="width_s35">140dp</dimen>
     <dimen name="width_s40">160dp</dimen>
     <dimen name="width_s44">176dp</dimen>
     <dimen name="width_s45">180dp</dimen>
+    <dimen name="width_s50">200dp</dimen>
     <dimen name="width_s55">220dp</dimen>
     <dimen name="width_s70">280dp</dimen>
 
     <dimen name="height_1">1dp</dimen>
-    <dimen name="height_s5">20dp</dimen>
+    <dimen name="height_2">2dp</dimen>
+    <dimen name="height_s1">4dp</dimen>
+    <dimen name="height_s2">8dp</dimen>
     <dimen name="height_s3">12dp</dimen>
     <dimen name="height_s4">16dp</dimen>
+    <dimen name="height_s5">20dp</dimen>
     <dimen name="height_s6">24dp</dimen>
     <dimen name="height_s7">28dp</dimen>
     <dimen name="height_s8">32dp</dimen>
+    <dimen name="height_s9">36dp</dimen>
+    <dimen name="height_s10">40dp</dimen>
     <dimen name="height_s12">48dp</dimen>
     <dimen name="height_s13">52dp</dimen>
     <dimen name="height_s14">56dp</dimen>
+    <dimen name="height_s15">60dp</dimen>
+    <dimen name="height_s20">80dp</dimen>
     <dimen name="height_s35">140dp</dimen>
     <dimen name="height_s40">160dp</dimen>
     <dimen name="height_s45">180dp</dimen>
-    <dimen name="height_s9">36dp</dimen>
 
     <dimen name="size_s2">8sp</dimen>
     <dimen name="size_s3">12sp</dimen>
