--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,5 +12,15 @@
         <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">@color/yellow</item>
     </style>
+    
+    <style name="SmallLabel">
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_margin">@dimen/margin_s1</item>
+        <item name="android:padding">@dimen/padding_2</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/size_s3</item>
+        <item name="android:background">@drawable/shape_rectangle_with_radius</item>
+    </style>
 
 </resources>
