--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,11 +10,13 @@
     <color name="white_alpha">#d2ffffff</color>
     <color name="transparent">#00000000</color>
     <color name="yellow">#FAC81E</color>
+    <color name="light_yellow">#fac927</color>
     <color name="grey">#adadad</color>
 
     <color name="light_grey">#E8E8E8</color>
     <color name="orange">#F9AB30</color>
     <color name="green">#1acb74</color>
     <color name="red">#ff0000</color>
+    <color name="dark_red">#d0011b</color>
     <color name="blue">#0000ff</color>
 </resources>
