--- a/app/src/main/res/layout/activity_look_around.xml
+++ b/app/src/main/res/layout/activity_look_around.xml
@@ -6,9 +6,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".business.main.activity.LookAroundActivity">
+    tools:context=".business.home.activity.LookAroundActivity">
 
-    <com.example.rebuy.business.TitleLayout
+    <com.example.rebuy.widget.TitleLayout
         app:titleName="@string/txt_look_around"
         app:isShowBack="true"
         android:background="@color/yellow"
