--- a/app/src/main/res/layout/fragment_auction.xml
+++ b/app/src/main/res/layout/fragment_auction.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".business.main.fragment.AuctionFragment">
+             tools:context=".business.auction.AuctionFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
