--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".business.main.fragment.HomeFragment">
+             tools:context=".business.home.HomeFragment">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
